--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CloudHeros</title>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="../style/index.css" />
-    <script src="../bootstrap/jquery-3.5.1.min.js" defer></script>
-    <script src="../bootstrap/js/bootstrap.js" defer></script>
-    <link rel="stylesheet" href="../fontawesome-free-5.12.0-web/css/all.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io (5)/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io (5)/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io (5)/favicon-16x16.png">
-    <link rel="manifest" href="../favicon_io (5)/site.webmanifest">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="./style/index.css" />
+    <script src="./bootstrap/jquery-3.5.1.min.js" defer></script>
+    <script src="./bootstrap/js/bootstrap.js" defer></script>
+    <link rel="stylesheet" href="./fontawesome-free-5.12.0-web/css/all.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io (5)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io (5)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io (5)/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_io (5)/site.webmanifest">
 
 </head>
 
@@ -32,11 +32,11 @@
             <div class="collapse navbar-collapse navbar-div" id="navbarNav">
                 <ul class="navbar-nav mr-4">
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3 BigScreen">
-                        <a class="nav-link" href="mainItem.html" id="navbarDropdown">
+                        <a class="nav-link" href="./template/mainItem.html" id="navbarDropdown">
                             Windows
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="mainItem.html">Windows11</a>
+                            <a class="dropdown-item" href="./template/mainItem.html">Windows11</a>
                             <a class="dropdown-item" href="#">windows10</a>
                             <a class="dropdown-item" href="#">windows10</a>
                         </div>
@@ -46,12 +46,12 @@
 
                     <!-- Small Screen -->
                     <li class="nav-item dropdown navbar-main-style mr-3 SmallScreen">
-                        <a class="nav-link dropdown-toggle" href="mainItem.html" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="./template/mainItem.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Windows
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="mainItem.html">Windows11</a>
+                            <a class="dropdown-item" href="./template/mainItem.html">Windows11</a>
                             <a class="dropdown-item" href="#">windows10</a>
                             <a class="dropdown-item" href="#">windows10</a>
                         </div>
@@ -61,22 +61,22 @@
 
 
                     <li class="nav-item navbar-main-style mr-3">
-                        <a class="nav-link" href="details.html">Office365</a>
+                        <a class="nav-link" href="./template/details.html">Office365</a>
                     </li>
                     <li class="nav-item navbar-main-style mr-3">
-                        <a class="nav-link" href="details.html">SharePoint</a>
+                        <a class="nav-link" href="./template/details.html">SharePoint</a>
                     </li>
                     <li class="nav-item navbar-main-style mr-3">
-                        <a class="nav-link" href="details.html">Security</a>
+                        <a class="nav-link" href="./template/submain-storage.html">Storage</a>
                     </li>
 
 
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3 BigScreen">
-                        <a class="nav-link" href="submain-server.html" id="navbarDropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="./template/submain-server.html" id="navbarDropdown" aria-haspopup="true" aria-expanded="false">
                             Server
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="submain-server.html">Exchange Server</a>
+                            <a class="dropdown-item" href="./template/submain-server.html">Exchange Server</a>
                             <a class="dropdown-item" href="#">SQL Server</a>
                         </div>
                     </li>
@@ -84,12 +84,12 @@
 
 
                     <li class="nav-item dropdown  navbar-main-style mr-3 SmallScreen">
-                        <a class="nav-link dropdown-toggle" href="submain-server.html" id="navbarDropdown" aria-haspopup="true"
+                        <a class="nav-link dropdown-toggle" href="./template/submain-server.html" id="navbarDropdown" aria-haspopup="true"
                             data-toggle="dropdown" aria-expanded="false">
                             Server
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="submain-server.html">Exchange Server</a>
+                            <a class="dropdown-item" href="./template/submain-server.html">Exchange Server</a>
                             <a class="dropdown-item" href="#">SQL Server</a>
                         </div>
                     </li>
@@ -97,7 +97,7 @@
 
 
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3 BigScreen">
-                        <a class="nav-link" href="submain-cloud.html" id="navbarDropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="./template/submain-cloud.html" id="navbarDropdown" aria-haspopup="true" aria-expanded="false">
                             Cloud
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
@@ -112,12 +112,12 @@
                     <!-- Small Screen -->
 
                     <li class="nav-item dropdown  navbar-main-style mr-3 SmallScreen">
-                        <a class="nav-link dropdown-toggle" href="submain-cloud.html" id="navbarDropdown" data-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="./template/submain-cloud.html" id="navbarDropdown" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             Cloud
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="submain-cloud.html">Google Cloud</a>
+                            <a class="dropdown-item" href="./template/submain-cloud.html">Google Cloud</a>
                             <a class="dropdown-item" href="#">Microsoft Azure</a>
                         </div>
                     </li>
@@ -130,8 +130,8 @@
                             <i class="fas fa-user-circle"></i>
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="signup.html">Create Account</a>
-                            <a class="dropdown-item" href="login.html">Login</a>
+                            <a class="dropdown-item" href="./template/signup.html">Create Account</a>
+                            <a class="dropdown-item" href="./template/login.html">Login</a>
                         </div>
                     </li>
                 </ul>
@@ -145,9 +145,9 @@
         <div class="header-container">
             <div class="header-left-section">
                 <div class="anchor_div">
-                    <a class="header-anchor" href="details.html">Windows10</a> <span class="anchor_span">,</span>
-                    <a class="header-anchor" href="details.html">Windows11</a><span class="anchor_span">,</span>
-                    <a class="header-anchor" href="details.html">Windows365</a>
+                    <a class="header-anchor" href="./template/details.html">Windows10</a> <span class="anchor_span">,</span>
+                    <a class="header-anchor" href="./template/details.html">Windows11</a><span class="anchor_span">,</span>
+                    <a class="header-anchor" href="./template/details.html">Windows365</a>
                 </div>
 
                 <h1 class="main-heading">Microsoft Unveils Windows 11, <br> A Desktop in the Cloud</h1>
@@ -175,12 +175,12 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left">
                         <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="details.html">Microsoft's Investment in Rubrik is a Shakeup
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
                                 for the Industry</a></h1>
                         <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
                         <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
@@ -193,12 +193,12 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
                         <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="details.html">Microsoft's Investment in Rubrik is a Shakeup
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
                                 for the Industry</a></h1>
                         <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
                         <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
@@ -211,31 +211,12 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
                         <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="details.html">Microsoft's Investment in Rubrik is a Shakeup
-                                for the Industry</a></h1>
-                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
-                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
-                            will likely shakeup the industry. Rubrik, a company that.</p>
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="card mb-3 border-0">
-                <div class="card-body row card-position">
-                    <div class="card-img col-md-4 float-left text-center">
-                        <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
-                                class="img-fluid img-post" alt=""></a>
-                    </div>
-                    <div class="col-md-6 float-left ">
-                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="details.html">Microsoft's Investment in Rubrik is a Shakeup
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
                                 for the Industry</a></h1>
                         <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
                         <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
@@ -249,12 +230,31 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
                         <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="details.html">Microsoft's Investment in Rubrik is a Shakeup
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
+                                for the Industry</a></h1>
+                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
+                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
+                            will likely shakeup the industry. Rubrik, a company that.</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="card mb-3 border-0">
+                <div class="card-body row card-position">
+                    <div class="card-img col-md-4 float-left text-center">
+                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                                class="img-fluid img-post" alt=""></a>
+                    </div>
+                    <div class="col-md-6 float-left ">
+                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
                                 for the Industry</a></h1>
                         <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
                         <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
@@ -312,10 +312,10 @@
                     <div class="footer__navigation">
                         <ul class="footer__list">
                             <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-                            <li class="footer__item"><a href="contact.html" class="footer__link">Contact us</a></li>
+                            <li class="footer__item"><a href="./template/contact.html" class="footer__link">Contact us</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
-                            <li class="footer__item"><a href="contact.html" class="footer__link">Privacy policy</a></li>
-                            <li class="footer__item"><a href="contact.html" class="footer__link">Terms</a></li>
+                            <li class="footer__item"><a href="./template/contact.html" class="footer__link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="./template/contact.html" class="footer__link">Terms</a></li>
                         </ul>
                     </div>
                 </div>
@@ -340,7 +340,7 @@
                     <a class="icon" href="#"><i class="fab fa-google-plus-g"></i></a>
                 </div>
                 <div>
-                    <p class="follower-title">© 2021 Danish Software Group</p> <a class="folloer-ploiy" href="contact.html">Privacy
+                    <p class="follower-title">© 2021 Danish Software Group</p> <a class="folloer-ploiy" href="./template/contact.html">Privacy
                         Policy</a./template/contact.html
             </div>
         </div>
