--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     2022, Microsoft is unveiling Windows..</p>
             </div>
             <div class="header-right-setion">
-                <img src="../assets/undraw_uploading_go67_copy2.png" height="410px" width="auto" alt="header-image"
+                <img src="./assets/undraw_uploading_go67_copy2.png" height="410px" width="auto" alt="header-image"
                     class="header-image" />
             </div>
             <div class="blueDiv container-fluid mt-5">
@@ -175,7 +175,7 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left">
@@ -193,7 +193,7 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -211,26 +211,7 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
-                                class="img-fluid img-post" alt=""></a>
-                    </div>
-                    <div class="col-md-6 float-left ">
-                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
-                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
-                                for the Industry</a></h1>
-                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
-                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
-                            will likely shakeup the industry. Rubrik, a company that.</p>
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="card mb-3 border-0">
-                <div class="card-body row card-position">
-                    <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -249,7 +230,26 @@
             <div class="card mb-3 border-0">
                 <div class="card-body row card-position">
                     <div class="card-img col-md-4 float-left text-center">
-                        <a href="./template/details.html"> <img src="../assets/rubrik-microsoft.png" height="300px" width="300px"
+                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px" width="300px"
+                                class="img-fluid img-post" alt=""></a>
+                    </div>
+                    <div class="col-md-6 float-left ">
+                        <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
+                        <h1 class="postSection-heading-anchor"><a href="./template/details.html">Microsoft's Investment in Rubrik is a Shakeup
+                                for the Industry</a></h1>
+                        <span class="postSection-date">Brad Sams | Aug 17, 2021</span>
+                        <p class="postSection-paragragh">Microsoft and Rubrik are announcing today an agreement that
+                            will likely shakeup the industry. Rubrik, a company that.</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="card mb-3 border-0">
+                <div class="card-body row card-position">
+                    <div class="card-img col-md-4 float-left text-center">
+                        <a href="./template/details.html"> <img src="./assets/rubrik-microsoft.png" height="300px" width="300px"
                                 class="img-fluid img-post" alt=""></a>
                     </div>
                     <div class="col-md-6 float-left ">
@@ -303,7 +303,7 @@
     <footer class="footer">
         <div class="footer__logo__box">
 
-            <img src="../assets/IMG_2250.PNG" alt="" width="300px" class="footer-logo" />
+            <img src="./assets/IMG_2250.PNG" alt="" width="300px" class="footer-logo" />
 
         </div>
         <div class="container ">
