--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CloudHeros</title>
+    <title>The-CloudHeros</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="./style/index.css" />
     <script src="./bootstrap/jquery-3.5.1.min.js" defer></script>
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand mr-5" href="index.html">CloudHeros</a>
+            <a class="navbar-brand mr-5" href="index.html">TheCloudHeros</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./template/mainItem.html">Windows11</a>
-                            <a class="dropdown-item" href="#">windows10</a>
+                            <a class="dropdown-item" href="./template/mainItem.html">windows10</a>
                             <a class="dropdown-item" href="#">windows10</a>
                         </div>
                     </li>
@@ -90,7 +90,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="./template/submain-server.html">Exchange Server</a>
-                            <a class="dropdown-item" href="#">SQL Server</a>
+                            <a class="dropdown-item" href="./template/submain-server.html">SQL Server</a>
                         </div>
                     </li>
 
@@ -101,7 +101,7 @@
                             Cloud
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Google Cloud</a>
+                            <a class="dropdown-item" href="./template/submain-cloud.html">Google Cloud</a>
                             <a class="dropdown-item" href="#">Microsoft Azure</a>
                         </div>
                     </li>
