--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>The-CloudHeros</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="./style/index.css" />
-    <script src="./bootstrap/jquery-3.5.1.min.js" defer></script>
-    <script src="./bootstrap/js/bootstrap.js" defer></script>
+    
+    <link rel="stylesheet" href="./ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./fonts/fontawesome-free-5.12.0-web/css/all.css" />
-    <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io (5)/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io (5)/favicon-32x32.png">
@@ -372,7 +371,8 @@
             </div>
         </div>
     </footer>
-
+    <script src="./bootstrap/jquery-3.5.1.min.js" ></script>
+    <script src="./bootstrap/js/bootstrap.js" ></script>
 </body>
 
 </html>
