--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
                 <!-- small screen serach box -->
                 <div>
-                    <form onsubmit="event.preventDefault();" role="search" class="SmallScreen form-small-serach">
+                    <form  class="SmallScreen form-small-serach">
                         <label for="search2">Search for stuff</label>
-                        <input id="search2" type="search" placeholder="Search..." autofocus required />
-                        <i type="submit" class="fa fa-search"></i>
+                        <input id="search2" type="text" placeholder="Search..." autofocus required />
+                        <button class="fa fa-search" type="submit"></button>
                     </form>
                     <hr>
                 </div>
