--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The-CloudHeros</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="./style/index.css" />
 
-    <link rel="stylesheet" href="./ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="./fonts/fontawesome-free-5.12.0-web/css/all.css" />
+    <!-- <link rel="stylesheet" href="./ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css" /> -->
+    <!-- <link rel="stylesheet" href="./fonts/fontawesome-free-5.12.0-web/css/all.css" /> -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io (5)/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io (5)/favicon-32x32.png">
@@ -185,17 +186,6 @@
             </div>
         </div>
     </nav>
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Header -->
@@ -539,3 +529,6 @@
 </body>
 
 </html>
+
+
+
